# django_note

./: README.rst  django_note-0.1-py3-none-any.whl  pyproject.toml
